tests/errors/undefined_sym.HC
//ERR: undefined symbol 'nope'
"%d\n",nope;
